syntax = "proto3";

option csharp_namespace = "Order.Api";

package greet;

service Order {
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc PlaceOrder (PlaceOrderRequest) returns (PlaceOrderReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message PlaceOrderRequest {
  int32 orderid = 1;
  repeated Product products = 2;
}

message PlaceOrderReply {
  string id = 1;
  bool status = 2;
  string message = 3;
}

message Product {
	string productId = 1;
	int32 quantity = 2;
}
